--- a/CPEvent/package.json
+++ b/CPEvent/package.json
@@ -13,6 +13,7 @@
     "@mantine/core": "^7.5.0",
     "@mantine/hooks": "^7.5.0",
     "@tabler/icons-react": "^2.46.0",
+    "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3"
