--- a/CPEvent/package.json
+++ b/CPEvent/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
