--- a/CPEvent/package.json
+++ b/CPEvent/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@floating-ui/core": "^1.6.0",
     "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
     "js-cookie": "^3.0.5",
