--- a/CPEvent/package.json
+++ b/CPEvent/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.6.1",
+    "@mantine/hooks": "^7.6.1",
     "flowbite-react": "^0.7.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
