--- a/CPEvent/package.json
+++ b/CPEvent/package.json
@@ -10,18 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.6.1",
-    "@mantine/hooks": "^7.6.1",
-
     "@floating-ui/core": "^1.6.0",
-    "axios": "^1.6.7",
-
-    "flowbite-react": "^0.7.2",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
     "@mantine/core": "^7.5.0",
     "@mantine/hooks": "^7.5.1",
     "@tabler/icons-react": "^2.46.0",
+    "axios": "^1.6.7",
+    "cors": "^2.8.5",
+    "flowbite-react": "^0.7.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.0",
